--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local);Database=SolicitudFondoAvanceDb;User Id=manueldev_nodejs;password=nodenode;Trusted_Connection=False;"
+  },
+
 }
