feat(DEV): Implementacion de JWT Token

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(local);Database=SolicitudFondoAvanceDb;User Id=manueldev_nodejs;password=nodenode;Trusted_Connection=False;"
   },
-
+  "Authorization": {
+    "SecretKeyJWT":  "AuthenticacionJWT20220292121"
+  }
 }
