--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=SolicitudFondoAvanceDb;User Id=manueldev_nodejs;password=nodenode;Trusted_Connection=False;"
+    "DevConnection": "Server=(local);Database=SolicitudFondoAvanceDb;User Id=manueldev_nodejs;password=nodenode;Trusted_Connection=False;",
+    "TestingConnection": "Server=(local);Database=SolicitudFondoAvanceDb_Testing;User Id=manueldev_nodejs;password=nodenode;Trusted_Connection=False;"
   },
   "Authorization": {
     "SecretKeyJWT":  "AuthenticacionJWT20220292121"
