--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=SolicitudFondoAvanceDb;User Id=manueldev_nodejs;password=nodenode;Trusted_Connection=False;"
+    "DefaultConnection": "Server=192.168.1.102;Database=SolicitudFondoAvanceDb;User Id=sa;password=Sa12345678;Trusted_Connection=False;"
   },
 
 }
